<?xml version="1.0" encoding="utf-8"?>

   <!-- Versión por defecto para terminales que no tengan configurado el idioma y por defecto se les pondrá en Inglés -->

   <!-- VERSIÓN EN INGLÉS-->

<resources>

   <!-- NO TRADUCIR -->
    <string name="app_name">IVChecker</string>

    <!-- 1. fragment de niveles-->

        <string name="nivel">Level</string>

        <string name="tM1">Are you ready?</string>
        <string name="tD1">You know the length of verb</string>

        <string name="tM2">Are you alive?</string>
        <string name="tD2">Now you do not know the length of verb</string>

        <string name="tM3">The things are complicated</string>
        <string name="tD3">The verbs are not  ordered correctly</string>

        <string name="tM4">You are succeeding!</string>
        <string name="tD4">Now two forms are missing</string>

        <string name="tM5">Do you have lives yet?</string>
        <string name="tD5">Two forms are missing and they are untidy</string>

        <string name="tM6">Show me that you know doing</string>
        <string name="tD6">Medium level verbs</string>

        <string name="tM7">You arere doing great</string>
        <string name="tD7">Medium level verbs</string>

        <string name="tM8">You have to concentrate</string>
        <string name="tD8">Medium level verbs</string>

        <string name="tM9">You will doing history</string>
        <string name="tD9">Medium level verbs</string>

        <string name="tM10">The finish is coming</string>
        <string name="tD10">Medium level verbs</string>

        <string name="tM11">You are a almost genius</string>
        <string name="tD11">More difficult verbs</string>

        <string name="tM12">You are about to success</string>
        <string name="tD12">Think before the answer</string>

        <string name="tM13">You are a genius</string>
        <string name="tD13">Keep the concentration</string>

        <string name="tM14">The finish is coming</string>
        <string name="tD14">You are about to arrive</string>

        <string name="tM15">The final battle !!</string>
        <string name="tD15">The last step to glory</string>


    <!--2.  Configuración -->

        <string name="ajustes">Settings</string>

        <string name="dificultad">Select difficulty</string>

        <string name="listaSimple">Soft list</string>
        <string name="listaMedia">Medium list</string>
        <string name="listaDificil">Hard list</string>

        <string name="entrenamientoInteligente">Smart training</string>
        <string name="numVerbosAPreguntar">Number of verbs to ask </string>


    <!--3. resultado Juego-->
        <string name="hasconseguido">you got</string>
        <string name="puntos">POINTS</string>
        <string name="genio">you are a genius!</string>
        <string name="wrc">Your WCR position:</string>
        <string name="pregunta">Do you want submit your points to WorldChallengeResult?</string>
        <string name="nombre">nick here</string>
        <string name="send">Send!</string>



    <!--4. juego -->
        <string name="mensajeVidaPerdida">You have lost a life.</string>
        <string name="mensajeMuerte">## GAME OVER ##</string>


    <!-- 5. training area -->
        <!-- Para ajustes se usa la ya definida arriba -->
        <string name="estadisticas">Statistics</string>
        <string name="eliminar">Delete</string>
        <string name="ficheroBorrado">Score\'s file is deleted</string>

    <!-- 6. juego training -->
        <string name="toastA">The game has not been configurated.
                    It will have a random list and a random number of verbs to ask</string>
        <string name="modoEntranamiento">Training Mode</string>
        <string name="juegoInteligente">Smart Training is activated!</string>
        <string name="smartDesactivado">Smart Training is NOT activated!</string>
        <string name="ErrorLecturaCSV" translatable="false">Error to read the score file</string>


    <!--7. wrc -->
        <string name="tituloAlerta">Network failure</string>
        <string name="mensajeAlerta">Maybe there are a problem with your conexion. Check it and come back here..</string>
        <string name="botonAAlerta">OK</string>
        <string name="boton2Alerta">Recharge</string>


    <!--8. About -->
        <string name="texto1">Do you know all irregular verbs yet?</string>
        <string name="texto2">Now, you can learn the most used of english, easy and quickly.</string>
        <string name="texto3">More of 200 verbs organized on three levels of difficulty.</string>
        <string name="texto4">In the training area you will can practice as much as you will want.
                              You will can leave that IVChecker  select the verbs random or select this you.
                              In addition if you want he can ask you about the more difficult verbs for you, IVChecker learn from you.
                              You only have that click on smart training.</string>
        <string name="texto5">In the main game you will can check your knowledge through 15 levels. Where until can you arrive?</string>
        <string name="texto6">You can also submit your game score to World Challenge Results list when you play in main game and compete with players around the world.</string>
        <string name="texto7">Privacy and personal data:</string>
        <string name="texto8">IV Checker do not use none of your personal data. We only need a nick to save your score in a server.
            The data are anonymous and we do not saving data of you or your device.</string>
        <string name="texto9">collaboration</string>
        <string name="texto10">Want to help us improve the app? If you think you lack a verb
         or any of the examples is not correct or you like to add any contact us to butterflydevsmail@gmail.com
         with your suggestions and we'll add in the next version.
        </string>

    <!-- 9. Resultados Training -->
        <string name="verbosFallados">Mistakes: </string>
        <string name="aciertos">hits</string>
        <string name="errores">misses</string>
        <string name="verbos">verbs</string>
        <string name="cabeceraVerbos">Not fail!</string>



        <!-- NO TRADUCIR -->
        <string name="developers">ButterFly Devs @ 2015</string>

    <!-- NO TRADUCIR -->
    <!-- Titulos de las actividades, obligatorios pero no usados -->
        <string name="title_activity_about">About</string>
        <string name="title_activity_training_area_inicio">TrainingAreaInicio</string>
        <string name="title_activity_juego_training">JuegoTraining</string>
        <string name="title_activity_configuracion">Configuracion</string>
        <string name="title_activity_wcr">wcr</string>
        <string name="title_activity_juego_show_level">juego_show_level</string>
        <string name="title_activity_resultados_training">ResultadosTraining</string>
        <string name="title_activity_resultado">Resultado</string>
        <string name="title_activity_eliminame">ELIMINAME</string>
        <string name="title_activity_historial_puntuacion_training">HistorialPuntuacionTraining</string>
        <string name="title_activity_lista_verbos">ListaVerbos</string>
        <string name="title_activity_juego">Juego</string>
        <string name="title_activity_resultados">resultados</string>
        <string name="title_activity_lista_verbos2">ListaVerbos2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
        <string name="title_activity_activity_final_juego">ActivityFinalJuego</string>





</resources>
