<!--Pantalla about para que se muestre la información de la aplicacioń.-->
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:foregroundGravity="top"
    android:background="@color/colorfondo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/titulo"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texto1"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="#fffff8f9"
            android:textSize="20dp" />

        <TextView
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texto2"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:textColor="#fffff8f9"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/imageView6"
                    android:src="@drawable/soft"
                    android:layout_gravity="center_horizontal" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/imageView7"
                    android:src="@drawable/medium"
                    android:layout_gravity="center_horizontal" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/imageView8"
                    android:src="@drawable/hard"
                    android:layout_gravity="top|center_horizontal" />
            </LinearLayout>

            <TextView
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto3"
                android:id="@+id/textView8"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textColor="#ffeff0d3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="180dp"
                android:layout_height="181dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto4"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:textColor="#fffff8f9"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView9"
                android:src="@drawable/trainningarea"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp" >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView11"
                android:src="@drawable/game"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="181dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto5"
                android:id="@+id/textView11"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffffa9"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="3.89"
            android:weightSum="1">

            <TextView
                android:layout_width="180dp"
                android:layout_height="137dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto6"
                android:id="@+id/textView12"
                android:layout_gravity="center_horizontal"
                android:textColor="#fffff8f9"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:id="@+id/imageView10"
                android:src="@drawable/ranking"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="60dp"
                android:layout_weight="0.39" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texto7"
            android:id="@+id/textView10"
            android:textColor="#ff560e30"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texto8"
            android:id="@+id/textView13"
            android:textColor="#ff000000"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texto9"
            android:id="@+id/textView23"
            android:textColor="#ff6fb931"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texto10"
            android:id="@+id/textView23"
            android:textColor="#ff313131"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/developers"
            android:id="@+id/textView14"
            android:textColor="#ffc3c3c3"
            android:textSize="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp" />

    </LinearLayout>
</ScrollView>
